--- a/argocd-helm-charts/traefik/charts/traefik/templates/rbac/clusterrole.yaml
+++ b/argocd-helm-charts/traefik/charts/traefik/templates/rbac/clusterrole.yaml
@@ -1,6 +1,8 @@
+{{- $version := include "imageVersion" $ }}
 {{- if .Values.rbac.enabled }}
 {{- if or
-       (semverCompare ">=v3.1.0-0" (.Values.image.tag | default .Chart.AppVersion))
+       (semverCompare ">=v3.1.0-0" $version)
+       (.Values.providers.kubernetesGateway.enabled)
        (not .Values.rbac.namespaced)
        (and .Values.rbac.namespaced .Values.providers.kubernetesIngress.enabled (not .Values.providers.kubernetesIngress.disableIngressClassLookup))
 }}
@@ -15,7 +17,7 @@ metadata:
     rbac.authorization.k8s.io/aggregate-to-{{ . }}: "true"
     {{- end }}
 rules:
-  {{- if semverCompare ">=v3.1.0-0" (.Values.image.tag | default .Chart.AppVersion) }}
+  {{- if semverCompare ">=v3.1.0-0" $version }}
   - apiGroups:
       - ""
     resources:
@@ -30,14 +32,14 @@ rules:
       - networking.k8s.io
     resources:
       - ingressclasses
-{{- if not .Values.rbac.namespaced }}
+  {{- if not .Values.rbac.namespaced }}
       - ingresses
-{{- end }}
+  {{- end }}
     verbs:
       - get
       - list
       - watch
-{{- if (.Values.providers.kubernetesGateway).enabled }}
+  {{- if (.Values.providers.kubernetesGateway).enabled }}
   - apiGroups:
       - ""
     resources:
@@ -59,9 +61,9 @@ rules:
       - gatewayclasses/status
     verbs:
       - update
-{{- end }}
-{{- if not .Values.rbac.namespaced }}
-  {{- if (semverCompare "<v3.1.0-0" (.Values.image.tag | default .Chart.AppVersion)) }}
+  {{- end }}
+ {{- if not .Values.rbac.namespaced }}
+  {{- if (semverCompare "<v3.1.0-0" $version) }}
   - apiGroups:
       - ""
     resources:
@@ -71,11 +73,20 @@ rules:
       - get
       - list
       - watch
+    {{- if $.Values.hub.token }}
+  - apiGroups:
+      - discovery.k8s.io
+    resources:
+      - endpointslices
+    verbs:
+      - get
+      - list
+      - watch
+    {{- end }}
   {{- else }}
   - apiGroups:
       - ""
     resources:
-      - nodes
       - services
     verbs:
       - get
@@ -86,9 +97,6 @@ rules:
     resources:
       - endpointslices
     verbs:
-    {{- if $.Values.hub.token }}
-      - get
-    {{- end }}
       - list
       - watch
   {{- end }}
@@ -97,13 +105,19 @@ rules:
     resources:
       - secrets
     {{- with .Values.rbac.secretResourceNames }}
-    resourceNames: {{ toYaml . |nindent 6 }}
+    resourceNames: {{ toYaml . | nindent 6 }}
     {{- end }}
     verbs:
       - get
       - list
       - watch
-{{- if .Values.providers.kubernetesIngress.enabled }}
+    {{- if and .Values.hub.token .Values.hub.apimanagement.enabled }}
+      - update
+      - create
+      - delete
+      - deletecollection
+    {{- end }}
+  {{- if .Values.providers.kubernetesIngress.enabled }}
   - apiGroups:
       - extensions
       - networking.k8s.io
@@ -111,8 +125,8 @@ rules:
       - ingresses/status
     verbs:
       - update
-{{- end -}}
-{{- if .Values.providers.kubernetesCRD.enabled }}
+  {{- end -}}
+  {{- if .Values.providers.kubernetesCRD.enabled }}
   - apiGroups:
       - traefik.io
     resources:
@@ -130,8 +144,8 @@ rules:
       - get
       - list
       - watch
-{{- end -}}
-{{- if .Values.podSecurityPolicy.enabled }}
+  {{- end -}}
+  {{- if .Values.podSecurityPolicy.enabled }}
   - apiGroups:
       - policy
     resourceNames:
@@ -140,21 +154,21 @@ rules:
       - podsecuritypolicies
     verbs:
       - use
-{{- end -}}
-{{- if .Values.providers.kubernetesGateway.enabled }}
+  {{- end -}}
+  {{- if .Values.providers.kubernetesGateway.enabled }}
   - apiGroups:
       - ""
     resources:
       - services
-{{- if (semverCompare "<v3.1.0-0" ($.Values.image.tag | default $.Chart.AppVersion)) }}
+    {{- if (semverCompare "<v3.1.0-0" $version) }}
       - endpoints
-{{- end }}
+    {{- end }}
       - secrets
     verbs:
       - get
       - list
       - watch
-{{- if (semverCompare ">=v3.1.0-0" ($.Values.image.tag | default $.Chart.AppVersion)) }}
+    {{- if (semverCompare ">=v3.1.0-0" $version) }}
   - apiGroups:
       - discovery.k8s.io
     resources:
@@ -162,7 +176,7 @@ rules:
     verbs:
       - list
       - watch
-{{- end }}
+    {{- end }}
   - apiGroups:
       - gateway.networking.k8s.io
     resources:
@@ -184,9 +198,47 @@ rules:
       - tlsroutes/status
     verbs:
       - update
-{{- end -}}
-{{- end -}}
+  {{- end }}
+  {{- if .Values.hub.token }}
+  - apiGroups:
+      - coordination.k8s.io
+    resources:
+      - leases
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+  {{- end }}
+{{- /* not .Values.rbac.namespace */}}
+{{- end }}
 {{- if .Values.hub.token }}
+   {{- if or (semverCompare ">=v3.1.0-0" $version) .Values.hub.apimanagement.enabled }}
+  - apiGroups:
+      - ""
+    resources:
+      - endpoints
+    verbs:
+      - list
+      - watch
+   {{- end }}
+  - apiGroups:
+      - ""
+    resources:
+      - namespaces
+    {{- if .Values.hub.apimanagement.enabled }}
+      - pods
+    {{- end }}
+    verbs:
+      - get
+      - list
+    {{- if .Values.hub.apimanagement.enabled }}
+      - watch
+    {{- end }}
+  {{- if .Values.hub.apimanagement.enabled }}
   - apiGroups:
       - hub.traefik.io
     resources:
@@ -207,51 +259,10 @@ rules:
   - apiGroups:
       - ""
     resources:
-      - namespaces
-      - pods
-    verbs:
-      - list
-  - apiGroups:
-      - ""
-    resources:
-      - namespaces
-      - pods
-      - nodes
-    verbs:
-      - get
-      - list
-      - watch
-  - apiGroups:
-      - ""
-    resources:
       - events
     verbs:
       - create
       - patch
-  - apiGroups:
-      - coordination.k8s.io
-    resources:
-      - leases
-    verbs:
-      - get
-      - list
-      - watch
-      - create
-      - update
-      - patch
-      - delete
-  - apiGroups:
-      - ""
-    resources:
-      - secrets
-    verbs:
-      - get
-      - list
-      - watch
-      - update
-      - create
-      - delete
-      - deletecollection
   - apiGroups:
       - apps
     resources:
@@ -260,15 +271,16 @@ rules:
       - get
       - list
       - watch
+    {{- if (semverCompare "<v3.1.0-0" $version) }}
   - apiGroups:
-      - extensions
-      - networking.k8s.io
+      - ""
     resources:
-      - ingresses
+      - nodes
     verbs:
-      - get
       - list
       - watch
+    {{- end -}}
+  {{- end -}}
 {{- end }}
 {{- end }}
 {{- end }}
