--- a/argocd-helm-charts/traefik/charts/traefik/templates/rbac/role.yaml
+++ b/argocd-helm-charts/traefik/charts/traefik/templates/rbac/role.yaml
@@ -1,3 +1,4 @@
+{{- $version := include "imageVersion" $ }}
 {{- $ingressNamespaces := concat (include "traefik.namespace" . | list) .Values.providers.kubernetesIngress.namespaces -}}
 {{- $CRDNamespaces := concat (include "traefik.namespace" . | list) .Values.providers.kubernetesCRD.namespaces -}}
 {{- $gatewayNamespaces := concat (include "traefik.namespace" . | list) ((.Values.providers.kubernetesGateway).namespaces) -}}
@@ -14,7 +15,7 @@ metadata:
   labels:
     {{- include "traefik.labels" $ | nindent 4 }}
 rules:
-  {{- if (semverCompare "<v3.1.0-0" ($.Values.image.tag | default $.Chart.AppVersion)) }}
+  {{- if (semverCompare "<v3.1.0-0" $version) }}
   - apiGroups:
       - ""
     resources:
@@ -38,9 +39,6 @@ rules:
     resources:
       - endpointslices
     verbs:
-    {{- if $.Values.hub.token }}
-      - get
-    {{- end }}
       - list
       - watch
   {{- end }}
@@ -111,30 +109,8 @@ rules:
 {{- end -}}
 {{- if (and (has . $gatewayNamespaces) ($.Values.providers.kubernetesGateway).enabled) }}
   - apiGroups:
-      - ""
-    resources:
-      - services
-{{- if (semverCompare "<v3.1.0-0" ($.Values.image.tag | default $.Chart.AppVersion)) }}
-      - endpoints
-{{- end }}
-      - secrets
-    verbs:
-      - get
-      - list
-      - watch
-{{- if (semverCompare ">=v3.1.0-0" ($.Values.image.tag | default $.Chart.AppVersion)) }}
-  - apiGroups:
-      - discovery.k8s.io
-    resources:
-      - endpointslices
-    verbs:
-      - list
-      - watch
-{{- end }}
-  - apiGroups:
       - gateway.networking.k8s.io
     resources:
-      - gatewayclasses
       - gateways
       - httproutes
       - referencegrants
@@ -157,25 +133,10 @@ rules:
 {{- end -}}
 {{- if $.Values.hub.token }}
   - apiGroups:
-      - hub.traefik.io
-    resources:
-      - accesscontrolpolicies
-      - apiaccesses
-      - apiportals
-      - apiratelimits
-      - apis
-      - apiversions
-    verbs:
-      - list
-      - watch
-      - create
-      - update
-      - patch
-      - delete
-      - get
-  - apiGroups:
       - ""
     resources:
+      - services
+      - endpoints
       - namespaces
       - pods
     verbs:
@@ -183,12 +144,13 @@ rules:
       - list
       - watch
   - apiGroups:
-      - ""
+      - discovery.k8s.io
     resources:
-      - events
+      - endpointslices
     verbs:
-      - create
-      - patch
+      - get
+      - list
+      - watch
   - apiGroups:
       - coordination.k8s.io
     resources:
@@ -201,35 +163,6 @@ rules:
       - update
       - patch
       - delete
-  - apiGroups:
-      - ""
-    resources:
-      - secrets
-    verbs:
-      - get
-      - list
-      - watch
-      - update
-      - create
-      - delete
-      - deletecollection
-  - apiGroups:
-      - apps
-    resources:
-      - replicasets
-    verbs:
-      - get
-      - list
-      - watch
-  - apiGroups:
-      - extensions
-      - networking.k8s.io
-    resources:
-      - ingresses
-    verbs:
-      - get
-      - list
-      - watch
-{{- end -}}
+{{- end }}
 {{- end -}}
 {{- end -}}
