--- a/argocd-helm-charts/traefik/charts/traefik/templates/requirements.yaml
+++ b/argocd-helm-charts/traefik/charts/traefik/templates/requirements.yaml
@@ -12,3 +12,9 @@
 {{- if and (.Values.providers.kubernetesGateway).enabled (and (semverCompare "<3.1.0-rc3" $version) (not .Values.experimental.kubernetesGateway.enabled)) }}
   {{- fail "ERROR: Before traefik v3.1.0-rc3, kubernetesGateway is experimental. Enable it by setting experimental.kubernetesGateway.enabled to true" -}}
 {{- end }}
+
+{{- if .Values.hub.token }}
+  {{- if and .Values.hub.apimanagement.enabled (and .Values.rbac.enabled .Values.rbac.namespaced) }}
+    {{- fail "ERROR: Currently Traefik Hub doesn't support namespaced RBACs" -}}
+  {{- end }}
+{{- end }}
