setup matomo in k8s

--- a/argocd-helm-charts/matomo/templates/mariadb-grant.yaml
+++ b/argocd-helm-charts/matomo/templates/mariadb-grant.yaml
@@ -1,4 +1,4 @@
-apiVersion: mariadb.mmontes.io/v1alpha1
+apiVersion: k8s.mariadb.com/v1alpha1
 kind: Grant
 metadata:
   name: grant
@@ -17,4 +17,7 @@ spec:
   database: "*"
   table: "*"
   username: matomo
+  host: "%"
   grantOption: true
+  requeueInterval: 30s
+  retryInterval: 5s
