--- a/argocd-helm-charts/matomo/templates/mariadb-database.yaml
+++ b/argocd-helm-charts/matomo/templates/mariadb-database.yaml
@@ -1,7 +1,7 @@
-apiVersion: mariadb.mmontes.io/v1alpha1
+apiVersion: k8s.mariadb.com/v1alpha1
 kind: Database
 metadata:
-  name: matomo
+  name: matomo-mariadb
 spec:
   mariaDbRef:
     name: matomo-mariadb
