--- a/argocd-helm-charts/argo-cd/charts/argo-cd/templates/redis-secret-init/job.yaml
+++ b/argocd-helm-charts/argo-cd/charts/argo-cd/templates/redis-secret-init/job.yaml
@@ -13,6 +13,7 @@ metadata:
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.redisSecretInit.name "name" .Values.redisSecretInit.name) | nindent 4 }}
 spec:
+  ttlSecondsAfterFinished: 60
   template:
     metadata:
       labels:
