[CI] Helm Chart Update keda

--- a/argocd-helm-charts/keda/charts/keda/templates/metrics-server/service.yaml
+++ b/argocd-helm-charts/keda/charts/keda/templates/metrics-server/service.yaml
@@ -26,6 +26,7 @@ metadata:
     {{- end }}
   {{- end }}
 spec:
+  type: {{ .Values.service.type }}
   ports:
   - name: https
     port: {{ .Values.service.portHttps }}
