--- a/argocd-helm-charts/keda/charts/keda/templates/metrics-server/serviceaccount.yaml
+++ b/argocd-helm-charts/keda/charts/keda/templates/metrics-server/serviceaccount.yaml
@@ -14,5 +14,5 @@ metadata:
     {{- end }}
   name: {{ (.Values.serviceAccount.metricServer).name | default .Values.serviceAccount.name }}
   namespace: {{ .Release.Namespace }}
-automountServiceAccountToken: {{ (.Values.serviceAccount.metricServer).automountServiceAccountToken | default .Values.serviceAccount.automountServiceAccountToken }}
+automountServiceAccountToken: {{ kindIs "invalid" (.Values.serviceAccount.metricServer).automountServiceAccountToken | ternary .Values.serviceAccount.automountServiceAccountToken (.Values.serviceAccount.metricServer).automountServiceAccountToken }}
 {{- end -}}
