--- a/argocd-helm-charts/keda/charts/keda/templates/webhooks/serviceaccount.yaml
+++ b/argocd-helm-charts/keda/charts/keda/templates/webhooks/serviceaccount.yaml
@@ -14,5 +14,5 @@ metadata:
     {{- end }}
   name: {{ (.Values.serviceAccount.webhooks).name | default .Values.serviceAccount.name }}
   namespace: {{ .Release.Namespace }}
-automountServiceAccountToken: {{ (.Values.serviceAccount.webhooks).automountServiceAccountToken | default .Values.serviceAccount.automountServiceAccountToken }}
+automountServiceAccountToken: {{ kindIs "invalid" (.Values.serviceAccount.webhooks).automountServiceAccountToken | ternary .Values.serviceAccount.automountServiceAccountToken (.Values.serviceAccount.webhooks).automountServiceAccountToken }}
 {{- end -}}
