--- a/argocd-helm-charts/keda/charts/keda/templates/crds/crd-cloudeventsources.yaml
+++ b/argocd-helm-charts/keda/charts/keda/templates/crds/crd-cloudeventsources.yaml
@@ -3,10 +3,13 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.14.0
+    {{- if (or .Values.crds.additionalAnnotations .Values.additionalAnnotations) }}
+    {{- toYaml (merge .Values.crds.additionalAnnotations .Values.additionalAnnotations) | nindent 4 }}
+    {{- end }}
   labels:
     app.kubernetes.io/name: {{ .Values.operator.name }}
-    {{- include "keda.labels" . | indent 4 }}
+    {{- include "keda.crd-labels" . | indent 4 }}
   name: cloudeventsources.eventing.keda.sh
 spec:
   group: eventing.keda.sh
