--- a/argocd-helm-charts/keda/charts/keda/templates/manager/deployment.yaml
+++ b/argocd-helm-charts/keda/charts/keda/templates/manager/deployment.yaml
@@ -29,9 +29,6 @@ spec:
         name: {{ .Values.operator.name }}
         app.kubernetes.io/name: {{ .Values.operator.name }}
         {{- include "keda.labels" . | indent 8 }}
-        {{- if .Values.podIdentity.activeDirectory.identity }}
-        aadpodidbinding: {{ .Values.podIdentity.activeDirectory.identity }}
-        {{- end }}
         {{- if .Values.podLabels.keda }}
         {{- toYaml .Values.podLabels.keda | nindent 8 }}
         {{- end }}
@@ -56,7 +53,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ (.Values.serviceAccount.operator).name | default .Values.serviceAccount.name }}
-      automountServiceAccountToken: {{ (.Values.serviceAccount.operator).automountServiceAccountToken | default .Values.serviceAccount.automountServiceAccountToken }}
+      automountServiceAccountToken: {{ kindIs "invalid" (.Values.serviceAccount.operator).automountServiceAccountToken | ternary .Values.serviceAccount.automountServiceAccountToken (.Values.serviceAccount.operator).automountServiceAccountToken }}
       securityContext:
         {{- if .Values.podSecurityContext.operator }}
         {{- toYaml .Values.podSecurityContext.operator | nindent 8 }}
@@ -105,6 +102,11 @@ spec:
           {{- end }}
           {{- if .Values.profiling.operator.enabled }}
           - "--profiling-bind-address=:{{ .Values.profiling.operator.port }}"
+          {{- end }}
+          {{- with (.Values.certificates.operator).caDirs }}
+          {{- range . }}
+          - "--ca-dir={{ . }}"
+          {{- end }}
           {{- end }}
           {{- range $key, $value := .Values.extraArgs.keda }}
           - "--{{ $key }}={{ $value }}"
