--- a/argocd-helm-charts/keda/charts/keda/templates/manager/serviceaccount.yaml
+++ b/argocd-helm-charts/keda/charts/keda/templates/manager/serviceaccount.yaml
@@ -45,5 +45,5 @@ metadata:
   {{- end }}
   name: {{ (.Values.serviceAccount.operator).name | default .Values.serviceAccount.name }}
   namespace: {{ .Release.Namespace }}
-automountServiceAccountToken: {{ (.Values.serviceAccount.operator).automountServiceAccountToken | default .Values.serviceAccount.automountServiceAccountToken }}
+automountServiceAccountToken: {{ kindIs "invalid" (.Values.serviceAccount.operator).automountServiceAccountToken | ternary .Values.serviceAccount.automountServiceAccountToken (.Values.serviceAccount.operator).automountServiceAccountToken }}
 {{- end -}}
