--- a/argocd-helm-charts/puppetserver/templates/postgresql.yaml
+++ b/argocd-helm-charts/puppetserver/templates/postgresql.yaml
@@ -2,9 +2,9 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   {{ if .Values.postgresql.recover }}
-  name: puppet-pgsql-recover
+  name: puppetserver-pgsql-recover
   {{ else }}
-  name: puppet-pgsql
+  name: puppetserver-pgsql
   {{ end }}
 spec:
   instances: {{ ((.Values.postgresql).instance) | default 1 }}
@@ -33,7 +33,7 @@ spec:
     {{- end }}
   {{- if .Values.postgresql.recover }}
   externalClusters:
-    name: postgresql-pgsql
+    name: puppetserver-pgsql
     barmanObjectStore:
       destinationPath: {{ .Values.postgresql.backup.destinationPath }}
       endpointURL: {{ .Values.postgresql.backup.endpointURL }}
