fix: added namespace support to postgresql puppetserver

--- a/argocd-helm-charts/puppetserver/templates/postgresql.yaml
+++ b/argocd-helm-charts/puppetserver/templates/postgresql.yaml
@@ -6,6 +6,7 @@ metadata:
   {{ else }}
   name: puppetserver-pgsql
   {{ end }}
+  namespace: {{ .Release.Namespace }}
 spec:
   instances: {{ ((.Values.postgresql).instance) | default 1 }}
   {{ if .Values.postgresql.recover }}
