fix: fixed the env and secret name as per new object name for puppetserver

--- a/argocd-helm-charts/puppetserver/values.yaml
+++ b/argocd-helm-charts/puppetserver/values.yaml
@@ -16,7 +16,7 @@ puppetserver:
     image: ghcr.io/voxpupuli/container-puppetdb
     tag: 7.14.0
     extraEnv:
-      PUPPETDB_POSTGRES_HOSTNAME: puppet-pgsql-rw
+      PUPPETDB_POSTGRES_HOSTNAME: puppetserver-pgsql-rw
 
   puppetboard:
     enabled: true
@@ -39,7 +39,7 @@ puppetserver:
   global:
     postgresql:
       auth:
-        existingSecret: puppet-pgsql-app
+        existingSecret: puppetserver-pgsql-app
         secretKeys:
           usernameKey: username
           userPasswordKey: password
