--- a/argocd-helm-charts/capi-cluster/templates/cilium.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/cilium.yaml
@@ -1,4 +1,4 @@
-{{- if (.Values.provider).aws }}
+{{- if .Values.selfManged }}
 apiVersion: addons.cluster.x-k8s.io/v1alpha1
 kind: HelmChartProxy
 metadata:
