--- a/argocd-helm-charts/argo-cd/charts/argo-cd/Chart.yaml
+++ b/argocd-helm-charts/argo-cd/charts/argo-cd/Chart.yaml
@@ -1,7 +1,7 @@
 annotations:
   artifacthub.io/changes: |
     - kind: fixed
-      description: added ttlsecondsafterfinished in redis-secret-init job to prevent a stuck in waiting for completion of hook batch/Job/argocd-redis-secret-init
+      description: Fix Redis race condition due to optional REDIS_PASSWORD
   artifacthub.io/signKey: |
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
@@ -28,4 +28,4 @@ name: argo-cd
 sources:
 - https://github.com/argoproj/argo-helm/tree/main/charts/argo-cd
 - https://github.com/argoproj/argo-cd
-version: 7.4.1
+version: 7.4.2
