lets not run r10k as sidecar, to avoid multiple container for it and fixed the r10k spec issue, entered in the wrong place

--- a/argocd-helm-charts/puppetserver/values.yaml
+++ b/argocd-helm-charts/puppetserver/values.yaml
@@ -9,8 +9,11 @@ puppetserver:
         enabled: true
 
   r10k:
-    viaSsh:
-      existingSecret: puppet-git-secret
+    asSidecar: false
+    code:
+      viaHttps:
+        credentials:
+          existingSecret: puppet-git-secret
 
   postgresql:
     enabled: false
