--- a/argocd-helm-charts/puppetserver/values.yaml
+++ b/argocd-helm-charts/puppetserver/values.yaml
@@ -6,7 +6,7 @@ puppetserver:
     puppeturl: ""
     masters:
       ingress:
-        enabled: true
+        enabled: false
 
   r10k:
     asSidecar: false
