added passthrough and remove certresolver, since we dont need it

--- a/argocd-helm-charts/puppetserver/templates/ingressroute.yaml
+++ b/argocd-helm-charts/puppetserver/templates/ingressroute.yaml
@@ -20,6 +20,6 @@ spec:
         interval: 15s
       nativeLB: true
   tls:
-    certResolver: puppetserver-{{ .Values.customerid }}
+    passthrough: true
     domains:
     - main: {{ .Values.customerid }}.puppet.obmondo.com
