--- a/argocd-helm-charts/puppetserver/templates/ingressroutetcp.yaml
+++ b/argocd-helm-charts/puppetserver/templates/ingressroutetcp.yaml
@@ -1,5 +1,5 @@
 apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
+kind: IngressRouteTCP
 metadata:
   name: puppetserver-{{ .Values.customerid }}
 spec:
@@ -7,7 +7,7 @@ spec:
     - websecure
   routes:
   - kind: Rule
-    match: Host(`{{ .Values.customerid }}.puppet.obmondo.com`)
+    match: HostSNI(`{{ .Values.customerid }}.puppet.obmondo.com`)
     priority: 10
     services:
     - kind: Service
