migrated the ingressroute to ingressroutetcp and removed options as per the tcp spec

--- a/argocd-helm-charts/puppetserver/templates/ingressroutetcp.yaml
+++ b/argocd-helm-charts/puppetserver/templates/ingressroutetcp.yaml
@@ -6,18 +6,11 @@ spec:
   entryPoints:
     - websecure
   routes:
-  - kind: Rule
-    match: HostSNI(`{{ .Values.customerid }}.puppet.obmondo.com`)
+  - match: HostSNI(`{{ .Values.customerid }}.puppet.obmondo.com`)
     priority: 10
     services:
-    - kind: Service
-      name: puppetserver-{{ .Values.customerid }}-puppet
-      namespace: puppetserver-{{ .Values.customerid }}
-      passHostHeader: true
+    - name: puppetserver-{{ .Values.customerid }}-puppet
       port: puppetserver
-      healthCheck:
-        path: /status/v1/simple
-        interval: 15s
       nativeLB: true
   tls:
     passthrough: true
