added autosign script puppetserver

--- a/argocd-helm-charts/puppetserver/values.yaml
+++ b/argocd-helm-charts/puppetserver/values.yaml
@@ -45,6 +45,8 @@ puppetserver:
     hieradataurl: ""
 
   global:
+    extraEnv:
+      AUTOSIGN: /etc/puppetlabs/code/master/puppet_autosign.rb
     postgresql:
       auth:
         existingSecret: puppetserver-pgsql-app
