--- a/argocd-helm-charts/puppetserver/values.yaml
+++ b/argocd-helm-charts/puppetserver/values.yaml
@@ -21,6 +21,8 @@ puppetserver:
             puppet config set node_terminus "exec" --section server
           fi
 
+          puppetserver gem install fugit -v 1.9.0
+
   r10k:
     asSidecar: false
     code:
