Installing tzinfo-data to puppet server

--- a/argocd-helm-charts/puppetserver/values.yaml
+++ b/argocd-helm-charts/puppetserver/values.yaml
@@ -22,6 +22,7 @@ puppetserver:
           fi
 
           puppetserver gem install fugit -v 1.9.0
+          puppetserver gem install tzinfo-data
 
   r10k:
     asSidecar: false
