changed the cron time for puppet git pull

--- a/argocd-helm-charts/puppetserver/values.yaml
+++ b/argocd-helm-charts/puppetserver/values.yaml
@@ -26,6 +26,8 @@ puppetserver:
   r10k:
     asSidecar: false
     code:
+      cronJob:
+        schedule: "*/2 * * * *"
       viaHttps:
         credentials:
           existingSecret: puppet-git-secret
